--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/templates/index.html
@@ -1,15 +1,69 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta charset="UTF-8" />
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Shopme Admin Control Panel</title>
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="" />
-  </head>
-  <body>
-    <h1>Welcome to Shopme Admin Control Panel</h1>
-  </body>
+<head>
+<meta charset="UTF-8" />
+<meta charset="utf-8" />
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<title>Shopme Admin Control Panel</title>
+<meta name="description" content="" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<link rel="stylesheet" type="text/css"
+	th:href="@{https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css}" />
+<!--    th:href="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.js}"-->
+
+<script type="text/javacript"
+	th:src="@{/webjars/angularjs/1.7.9/angular.min.js}"></script>
+<script type="text/javacript"
+	th:src="@{/webjars/bootstrap/4.0.0/css/bootstrap.min.js}"></script>
+</head>
+<body>
+	<div class="container-fluid"></div>
+	<div></div>
+	<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+		<div class="container">
+			<!--           <img th:src="@{/images/shopme.png}" height="75px" width="75px" /> -->
+
+			<a class="navbar-brand" th:href="@{/}">ShopMe</a>
+
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarNav">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item"><a class="nav-link" th:href="@{/users}">Users</a>
+					</li>
+					<li class="nav-item"><a class="nav-link"
+						th:href="@{/categories}">Categories</a></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/brands}">Brands</a>
+					</li>
+					<li class="nav-item"><a class="nav-link"
+						th:href="@{/products}">Products</a></li>
+					<li class="nav-item"><a class="nav-link"
+						th:href="@{/customers}">Customers</a></li>
+					<li class="nav-item"><a class="nav-link"
+						th:href="@{/shippings}">Shippings</a></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/orders}">Orders</a>
+					</li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/reports}">Sales
+							Report</a></li>
+					<li class="nav-item"><a class="nav-link"
+						th:href="@{/articles}">Articles</a></li>
+					<li class="nav-item"><a class="nav-link" th:href="@{/menus}">Menus</a>
+					</li>
+					<li class="nav-item"><a class="nav-link"
+						th:href="@{/settings}">Settings</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
+
+
+	<div>
+		<h1>Welcome to Shopme Admin Control Panel</h1>
+	</div>
+	<div>
+		<p>Shopme Control Panel - Copyright &copy; Shopme</p>
+	</div>
+</body>
 </html>
