--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/static/template/home.html
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/static/template/home.html
@@ -1,20 +1,16 @@
 <div class="container">
   <div class="panel panel-default">
     <div class="alert alert-success">
-      <span class="lead"> Welcome to User Registration System </span>
+      <span class="lead"> Welcome to Admin System </span>
     </div>
     <div class="panel-body">
       <div class="alert alert-info">
         <ul>
+          
           <li>
-            Please click on
-            <strong>Register New User</strong>
-            to register a new user.
-          </li>
-          <li>
-            Please click on
-            <strong>List All Users</strong>
-            to get all users.
+            
+            <strong>Welcome to Admin Home Page</strong>
+            
           </li>
         </ul>
       </div>
